# REST-API-using-Rust

./: README.md
rust_mongodb_warp/: .future-incompat-report.json  .rustc_info.json  Cargo.toml  boxoffice_json_log_configuration.yaml
rust_mongodb_warp/HELP/: Application_Requirements.txt  thunder-collection_MoviesJSON.json
rust_mongodb_warp/HELP/DatabaseHelp/: BoxOffice_Schema.json  Database_Information.txt  Movies.json
rust_mongodb_warp/doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
rust_mongodb_warp/doc/rust_mongodb_warp/: all.html  fn.main.html  index.html  sidebar-items.js  type.Result.html  type.WebResult.html
rust_mongodb_warp/doc/rust_mongodb_warp/business_layer/: fn.calculate_percentage.html  fn.calculate_verdict.html  index.html  sidebar-items.js
rust_mongodb_warp/doc/rust_mongodb_warp/constants/: constant.BUDGET_CRORES.html  constant.BUDGET_EQUALS_COLLECTION.html  constant.BUDGET_GREATER_THAN_ZERO_ERROR.html  constant.COLLECTION_CRORES.html  constant.COLLECTION_GREATER_THAN_ZERO_ERROR.html  constant.DB_OPERATION_FAILED.html  constant.ID.html  constant.LOSS_PERCENTAGE_GREATER_THAN_0_BUT_LESS_THAN_OR_EQUAL_TO_10.html  constant.LOSS_PERCENTAGE_GREATER_THAN_10_BUT_LESS_THAN_OR_EQUAL_TO_20.html  constant.LOSS_PERCENTAGE_GREATER_THAN_20_BUT_LESS_THAN_OR_EQUAL_TO_40.html  constant.LOSS_PERCENTAGE_GREATER_THAN_40.html  constant.MAXIMUM_YEAR_OF_RELEASE.html  index.html  (+18 more)
rust_mongodb_warp/src/: business_layer.rs  constants.rs  db_layer.rs  error.rs  handler.rs  main.rs  model.rs  request_response_structs.rs  response.rs  routes.rs
(+90 files in other folders)
