
[package]
name = "rust_mongodb_warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
validator = { version = "0.15", features = ["derive"] }
thiserror = "1.0"
ron = "0.7.0"
futures = { version = "0.3.4", default-features = false, features = ["async-await"] }
mongodb = "2.4.0"
bson = "2.6.0"
unescape = "0.1.0"
rust_decimal = "1.28.1"
bytes = "1.4.0"
log = "0.4"
log4rs = { version ="1.0.0", features = ["gzip"] }
validator_derive = "0.10"
serde_path_to_error = "0.1"




